src/test/resources/semantic/declarations/error/TC_ERROR_HEREDAR_STRUCT_NO_DEFINIDO.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 4 | COLUMNA 8 | La estructura 'B' no se encuentra definida. |
struct A:B{

}
impl A{
    .(){}
}
start{}